samples/_failures_safe/1761692884_d3ca99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2ca95c0.c: In function ‘main’:
./samples/SAFE/__tmp_f2ca95c0.c:207:5: error: expected declaration or statement at end of input
  207 |     if (len == 0) {
      |     ^~
./samples/SAFE/__tmp_f2ca95c0.c:207:5: error: expected declaration or statement at end of input
